# luonnonmetsakartta-service

./: .env.template  .gitignore  Dockerfile  README  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.sandbox.yml  docker-compose.yml  docker-entrypoint.prod.sh  docker-entrypoint.sh  pyproject.toml  pytest.ini  update-deps.py
.devcontainer/: devcontainer.json  devcontainer.template.json
alembic/: env.py
alembic/versions/: 045bbadc2e1e_.py  18151c5c20b5_add_col_options_to_forest_layer.py  2bb22583c94a_fix_column_type.py  52e388cb0b43_add_picture.py  5cc151d69f58_.py  8b78b9b9d849_.py  96802b671a4f_.py  9a77f00e73ed_.py  9c114c5a13a8_.py  9d2226b17311_.py  a4d9e88420ae_fix_onupdate.py  b2e8a8ad3bb2_add_cascade_delete.py  be296d260a4e_.py  c593e9e01a07_.py  d7e265d55f72_fix_original_id_being_in_forest_layer_.py  ddc489b71091_.py  ebdd0637737e_.py
app/: config.py  main.py  main_prod_test.py  main_test.py
app/api/: bucket.py  geoserver.py  geoserver_prod_test.py  geoserver_test.py
app/auth/: utils.py  validator.py
app/db/: connection.py  connection_mock.py  forest_area.py  forest_area_test.py  forest_layer.py  forest_layer_test.py  layer.py  layer_test.py  picture.py  prod_connection_mock.py
app/db/models/: area.py  forest_area.py  forest_layer.py  layer.py  picture.py
app/types/: general.py
app/utils/: general.py  geometry.py  logger.py  storage_cleanup.py
notebooks/: check_data.ipynb
scripts/: cleanup_layers.py  populate_db.py  run_prod_migrations.sh
tests/api/: test.py
