[tool.poetry]
name = "luonnonmetsakartta-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app"},
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
fastapi = "^0.115.4"
requests = "^2.32.3"
pytz = "^2024.2"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
pytest-order = "^1.3.0"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
rich = {extras = ["jupyter"], version = "^13.9.4"}
alembic = "^1.14.0"
geoalchemy2 = "^0.15.2"
asyncpg = "^0.30.0"
alembic-postgresql-enum = "^1.3.0"
psycopg2-binary = "^2.9.10"
shapely = "^2.0.6"
geopandas = "^1.0.1"
python-multipart = "^0.0.19"
pytest = "^8.3.4"
authlib = "^1.4.1"
ftfy = "^6.3.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
